Fix alignment again...

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   background: linear-gradient(180deg, darkturquoise, wheat);
   min-height: 100%;
+  max-width: 1200px;
   font-family: Joan, serif;
 }
 
@@ -8,14 +9,15 @@ h1 {
   text-align: left;
   padding-left: 0.4em;
   font-family: Lato, sans-serif;
-  font-size: 4vw;
+  font-size: 2.75em;
   font-weight: 900;
   font-style: italic;
   color: white;
-  text-shadow: 0.3vw 0.3vw 0.3vw darkviolet;
+  text-shadow: 3px 3px 2px darkviolet;
   text-transform: uppercase;
-  letter-spacing: 30px;
-  word-spacing: 40px;
+  letter-spacing: 0.5em;
+  word-spacing: 0.8em;
+  overflow: wrap;
 }
 
 h2 {
